--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
+    "concat": "^1.0.3",
     "copy-webpack-plugin": "^4.6.0",
+    "fs-extra": "^11.1.1",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
